--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,10 @@
 
     <ImageView
         android:id="@+id/ivPostImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="194dp"
+        android:layout_height="197dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
         app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -30,8 +30,8 @@
         android:id="@+id/btnSubmit"
         android:layout_width="256dp"
         android:layout_height="48dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginBottom="224dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="228dp"
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,7 +41,7 @@
         android:layout_width="256dp"
         android:layout_height="48dp"
         android:layout_marginStart="76dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:text="TAKE PICTURE"
         app:layout_constraintBottom_toTopOf="@+id/ivPostImage"
         app:layout_constraintStart_toStartOf="parent" />
@@ -50,10 +50,13 @@
         android:id="@+id/etDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="Description..."
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="154dp" />
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCaptureImage"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
