create xml file for feed activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,4 +59,12 @@
         app:layout_constraintBottom_toTopOf="@+id/btnCaptureImage"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/feedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Feed"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="637dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
