--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,8 @@
         android:id="@+id/ivPostImage"
         android:layout_width="194dp"
         android:layout_height="197dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="148dp"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
         app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -31,7 +31,7 @@
         android:layout_width="256dp"
         android:layout_height="48dp"
         android:layout_marginStart="76dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginBottom="88dp"
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,9 +41,9 @@
         android:layout_width="256dp"
         android:layout_height="48dp"
         android:layout_marginStart="76dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="11dp"
         android:text="TAKE PICTURE"
-        app:layout_constraintBottom_toTopOf="@+id/ivPostImage"
+        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -63,10 +63,30 @@
         android:id="@+id/feedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="16dp"
         android:text="Feed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="69dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="171dp"
+        android:layout_marginTop="94dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icon" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="133dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="139dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:srcCompat="@drawable/nav_logo_whiteout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
